# Langgraph-Agent1

./: .gitignore  README.md  check_mongo.py  debug_output.json  pyproject.toml  rest.http
Agents/: company_reports.db  database.py
agentic_rag/: README.md  inspect_dbs.py  inspect_dbs2.py  pyproject.toml  rest.http  test_dashboard.py  test_db.py  test_generate.py  test_neon.py
agentic_rag/frontend/: app.js  index.html  style.css
agentic_rag/rag_app/: agent.py  database.py  main.py  pdf_generator.py  tools.py
agentic_rag/rag_app/api/: schemas.py
agentic_rag/rag_app/api/routers/: analysis.py  chat.py  dashboard.py  documents.py  products.py
app/: company_reports.db  database.py  graph.py  main.py  nodes.py  schemas.py
