[project]
name = "company-intelligence-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.9.0",
    "fastapi>=0.138.0",
    "feedparser>=6.0.12",
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.6",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
]
