[project]
name = "company-intelligence-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "crawl4ai>=0.9.0",
    "dnspython>=2.8.0",
    "fastapi>=0.138.0",
    "feedparser>=6.0.12",
    "httpx>=0.27.0",
    "langchain-google-genai>=4.2.5",
    "langchain-mistralai>=1.1.5",
    "langgraph>=1.2.6",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "pymongo>=4.17.0",
    "qdrant-client>=1.18.0",
    "python-dotenv>=1.2.2",
    "reportlab>=4.1.0",
    "requests>=2.34.2",
    "supabase>=2.31.0",
    "upstash-redis>=1.7.0",
    "uvicorn>=0.49.0",
]
