[project]
name = "agentic-rag"
version = "0.1.0"
description = "Agentic RAG using Supabase and Upstash Redis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "fastapi>=0.138.0",
    "feedparser>=6.0.12",
    "httpx>=0.27.0",
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "supabase>=2.13.0",
    "upstash-redis>=1.2.0",
    "uvicorn>=0.49.0",
]
